# tribunal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  go.mod  go.sum  tribunal.yaml.example
.github/workflows/: contracts.yml  go.yml
.tribunal/reports/: devnet-e2e-2026-05-13.md
agents/: tribunal-adversary.md  tribunal-architect.md  tribunal-classifier.md  tribunal-implementer.md  tribunal-pm.md  tribunal-qa.md  tribunal-reviewer-arch.md  tribunal-reviewer-perf.md  tribunal-reviewer-sec.md  tribunal-reviewer-temporal.md
cmd/seed-fizzbuzz-demo/: main.go
cmd/tribunal/: agents.go  chain.go  converge.go  converge_reputation.go  dispatch.go  fix.go  history.go  history_test.go  init.go  json.go  (+5 more)
cmd/tribunal-batch-file/: main.go
cmd/tribunal-seed/: main.go
contracts/tribunal-reputation/: Cargo.toml
contracts/tribunal-reputation/.cargo/: config.toml
contracts/tribunal-reputation/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  validate.rs
contracts/tribunal-reputation/src/execute/: commit.rs  register.rs  resolve.rs  rotate.rs
contracts/tribunal-reputation/src/query/: agent.rs  finding.rs  leaderboard.rs  reputation.rs
contracts/tribunal-reputation/tests/: integration.rs  property_tests.proptest-regressions  property_tests.rs
docs/: convergence.md  incentive-mechanism.md  installation.md  methodology.md  on-chain-protocol.md  temporal-lens.md
scripts/: deploy-contract.sh  init-testnet.sh
site/: .gitignore  astro.config.mjs  deploy.sh  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
trajectory/: trajectory.go  trajectory_test.go
(+147 files in other folders)
